<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Date!</string>
    <string name="app_name">悠悠家园</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="opt_autoload">自动登陆</string>
    <string name="login">登 录</string>
    <string name="opt_hideLogin">隐身登录</string>
    <string name="opt_silent">静音登录</string>
    <string name="opt_openVibra">开启振动</string>
    <string name="opt_acceptGroupMsg">接收群消息</string>
    <string name="main_map">定位服务</string>
    <string name="main_message">信息</string>
    <string name="main_setting">设置</string>
    <string name="main_status">日常起居</string>
    <string name="loading_map">正在获取地图...</string>
    <string name="loading_status">正在获取状态...</string>
    <string name="loading_message">正在获取信息...</string>
    <string name="login_out">注销登陆</string>
    <string name="exit">退出</string>
    <string name="switch_ward_error">切换被监护人失败</string>
    <string name="get_msg_error">获取信息出错</string>
    <string name="get_msg_timeout">获取信息超时</string>
    <string name="newest_pos">获取最新位置</string>
    <string name="getting_newest_pos">正在获取最新位置...</string>
    <string name="getting_newest_status">正在获取最新状态...</string>
    <string name="getting_newest_message">正在获取最新信息...</string>
    <string name="switch_ward">正在切换家庭组成员...</string>
    <string name="getting_newest_pos_sucess">获取最新位置成功</string>
    <string name="getting_newest_pos_failed">获取最新位置失败</string>
    <string name="getting_msg_sucess">获取消息成功</string>
    <string name="getting_msg_failed">获取消息失败</string>
    <string name="getting_new_msg_failed">信息查询失败</string>
    <string name="getting_new_msg_none">没有新信息</string>
    <string name="more_message">更多信息</string>
    <string name="path">查看轨迹</string>
    <string name="range">设置安全范围</string>
    <string name="get_new_status">获取最新状态</string>
    <string name="refresh_map">刷新地图</string>
    <string name="get_new_message">获取新消息</string>
    <string name="wait_tip">过程可能需要1-2分钟</string>
 
</resources>